.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k9e
  name: k9e-service
  namespace: k9e
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: k9e
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
